Fix post nested list spacing

--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -16,6 +16,12 @@
   ol, ul
     padding-left: $b-space
 
+    ol, ul
+      margin-bottom: 0
+
+      > li:first-child
+        margin-top: $b-space-s
+
   h2
     margin-bottom: $b-space-s
     margin-top: $b-space
